[gd_scene load_steps=5 format=3 uid="uid://d1rrso4wiig20"]

[ext_resource type="Script" uid="uid://dj367jxut4iy2" path="res://scenes/manga.gd" id="1_kyp66"]
[ext_resource type="Texture2D" uid="uid://chpn7smvhkop" path="res://assets/boss_joey_manga1.png" id="2_rcb67"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfe0w"]
size = Vector2(47, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kyp66"]
size = Vector2(47, 25)

[node name="Manga" type="CharacterBody2D"]
scale = Vector2(5, 5)
collision_layer = 3
collision_mask = 2
script = ExtResource("1_kyp66")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_mfe0w")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_rcb67")

[node name="HitArea" type="Area2D" parent="."]

[node name="BookCollision" type="CollisionShape2D" parent="HitArea"]
position = Vector2(1.5, 23.5)
shape = SubResource("RectangleShape2D_kyp66")
one_way_collision = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
